# data-collection

./: README.md  download-youtube.py  pyproject.toml
data_collection/: __init__.py  cli.py
data_collection/face_recognition/: __init__.py
data_collection/scripts/: download_youtube.py
