[tool.poetry]
name = "data_collection"
version = "0.1.0"
description = "Collection of scripts for compiling various forms of data for ML"
authors = ["Andy Jackson <amjack100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
data_collection = 'data_collection.cli:fire_main'